Add few shot evaluation

--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,18 @@
 wic_tsv_de_folder='./wic_tsv_de'
-wic_tsv_pretrained_model=
+wic_tsv_pretrained_model='/home/revenkoa/local_data/models/hyperbert-3-de-v1'
 tokenizer_name='bert-base-german-cased'
-nif_annotations_folder=
-manual_annotations_folder=
-manual_verified_folder=
-output_folder=
-log_path=
+nif_annotations_folder='/home/revenkoa/local_data/datasets/LER/cybly_decisions/ner_annotations_nif'
+manual_annotations_folder='/home/revenkoa/local_data/datasets/LER/cybly_decisions/gold_data/manually_annotated'
+manual_verified_folder='/home/revenkoa/local_data/datasets/LER/cybly_decisions/gold_data/manually_verified'
+output_folder='/home/revenkoa/local_data/datasets/LER/cybly_decisions/gold_data/train_datasets'
+log_path='/home/revenkoa/local_data/datasets/LER/cybly_decisions/gold_data/train_datasets/log.txt'
+
+conll_train_path='/home/revenkoa/local_data/datasets/LER/cybly_decisions/few_shot_training/train.txt'
+conll_dev_path='/home/revenkoa/local_data/datasets/LER/cybly_decisions/few_shot_training/dev.txt'
+conll_test_path='/home/revenkoa/local_data/datasets/LER/cybly_decisions/few_shot_training/test.txt'
+ner_labels_path='/home/revenkoa/local_data/datasets/LER/cybly_decisions/few_shot_training/labels.txt'
+verified_1shot_folder='/home/revenkoa/local_data/datasets/LER/cybly_decisions/few_shot_training/support-1shot'
+verified_5shot_folder='/home/revenkoa/local_data/datasets/LER/cybly_decisions/few_shot_training/support-5shot'
+wic_tsv_pretrained_model3='/home/revenkoa/local_data/models/hyperbert-3-de-v1'
+few_shot_hyperbert_output='/home/revenkoa/local_data/datasets/LER/cybly_decisions/few_shot_training/output-hyperbert'
+few_shot_log_path='/home/revenkoa/local_data/datasets/LER/cybly_decisions/few_shot_training/output-hyperbert/log.txt'
